[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Button_Hover.png" type="Texture" id=1]
[ext_resource path="res://ArtWork/Logo-export.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://UI/Button_Normal.png" type="Texture" id=4]
[ext_resource path="res://UI/Button_Pressed.png" type="Texture" id=5]
[ext_resource path="res://Font.tres" type="DynamicFont" id=6]

[node name="Menu" type="CanvasLayer"]
layer = 3
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -0.940491
margin_top = -130.0
margin_right = 1279.06
margin_bottom = 590.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -0.21814
margin_top = 572.028
margin_right = 1279.78
margin_bottom = 1292.03
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 72.0
margin_right = -48.0
margin_bottom = 87.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLabel" type="Label" parent="Play"]
margin_left = 7.0
margin_top = 0.75
margin_right = 42.0
margin_bottom = 15.75
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
text = "PLAY"

[node name="Quit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 265.0
margin_right = -48.0
margin_bottom = 280.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="Quit"]
margin_left = 8.76976
margin_top = 0.867981
margin_right = 43.7698
margin_bottom = 15.868
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
